# trackerboy

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CompilerOverrides.cmake  LICENSE  ORGANIZATION.md  README.md  codecov.yml  mkdocs.yml  trackerboy.nimble  updateminiaudio.sh  vcpkg.json
audio/: BackendTable.cpp  CMakeLists.txt  DeviceManager.cpp  DeviceTable.cpp  PaException.cpp  PlaybackQueue.cpp  SoundIoError.cpp
demo/: CMakeLists.txt  Demo.cpp  base.cpp  base.h  demo.hpp  device_manager.cpp  device_table.cpp  duty.cpp  instrument_demo.cpp  main.cpp  osc_demo.cpp  pattern_demo.cpp  song_demo.cpp  sweep.cpp  synth_demo.cpp  volume_demo.cpp
demo/demos/: DutyDemo.cpp  SweepDemo.cpp  WaveDemo.cpp  WaveVolDemo.cpp
demo/interactive/: apu_demo.cpp  frequency_demo.cpp  interactive.cpp
demo/src/: instrument_demo.cpp
libtrackerboy/: CMakeLists.txt  File.cpp  InstrumentPreview.cpp  Module.cpp  Synth.cpp  Table.cpp  fileformat.cpp  note.cpp  test_File.cpp  test_Table.cpp  test_fileformat.cpp  version.cpp
libtrackerboy/data/: DataItem.cpp  DataList.cpp  InfoStr.cpp  Instrument.cpp  Module.cpp  Order.cpp  Pattern.cpp  PatternMaster.cpp  Sequence.cpp  Song.cpp  SongList.cpp  Table.cpp  Track.cpp  TrackRow.cpp  Waveform.cpp  checkedstream.hpp  test_DataItem.cpp  test_DataList.cpp  test_Instrument.cpp  test_Module.cpp  test_Order.cpp  test_Pattern.cpp  test_PatternMaster.cpp
libtrackerboy/engine/: ChannelControl.cpp  Engine.cpp  FrequencyControl.cpp  IApu.cpp  InstrumentRuntime.cpp  MusicRuntime.cpp  NoteControl.cpp  Operation.cpp  PatternCursor.cpp  PatternRuntime.cpp  RuntimeContext.cpp  SongRuntime.cpp  Timer.cpp  TrackControl.cpp  TrackRuntime.cpp  test_NoteControl.cpp  test_Timer.cpp
libtrackerboy/export/: Player.cpp  Wav.cpp
libtrackerboy/instrument/: Instrument.cpp  InstrumentRuntime.cpp  NoiseInstrumentRuntime.cpp  ParseError.cpp  PulseInstrumentRuntime.cpp  WaveInstrumentRuntime.cpp  WaveTable.cpp  parse.cpp
libtrackerboy/internal/: endian.hpp  enumutils.hpp  test_endian.cpp  test_tlv.cpp  tlv.cpp  tlv.hpp
libtrackerboy/pattern/: Pattern.cpp  PatternMaster.cpp  PatternRuntime.cpp  Track.cpp  TrackRuntime.cpp  test_Pattern.cpp
libtrackerboy/song/: Order.cpp  Song.cpp  SongRuntime.cpp  test_Order.cpp
libtrackerboy/src/: InstrumentPreview.cpp  Synth.cpp
libtrackerboy/synth/: Channel.cpp  EnvChannel.cpp  Envelope.cpp  Generator.cpp  HardwareFile.hpp  Mixer.cpp  NoiseChannel.cpp  NoiseGen.cpp  NoiseGen.hpp  Osc.cpp  PulseChannel.cpp  PulseGen.cpp  PulseGen.hpp  PulseOsc.cpp  Sequencer.cpp  Sequencer.hpp  Sweep.cpp  Sweep.hpp  SweepPulseChannel.cpp  Synth.cpp  WaveChannel.cpp  WaveGen.cpp  WaveGen.hpp  WaveOsc.cpp  Waveform.cpp  gbsynth.cpp  sampletable.cpp  sampletable.hpp  test_Osc.cpp
src/: CMakeLists.txt  Channel.cpp  CustomEvents.hpp  EnvChannel.cpp  FreqChannel.cpp  GitSHA1.cpp.in  GitSHA1.hpp  Mixer.cpp  NoiseChannel.cpp  Oscillator.cpp  PulseChannel.cpp  README.md  Sequencer.cpp  SquareChannel.cpp  Sweep.cpp  SweepPulseChannel.cpp  Synth.cpp  WaveChannel.cpp  config.nims  dependencies.cmake  envelope.c  envelope.h  gbsynth.c  gbsynth.cpp  gbsynth2.cpp  main.cpp  square.c  square.h  tables.cpp  tables.h  trackerboy.nim  version.cpp.in  version.hpp
src/audio/: AudioEnumerator.cpp  AudioEnumerator.hpp  AudioStream.cpp  AudioStream.hpp  Renderer.cpp  Renderer.hpp  Ringbuffer.cpp  Ringbuffer.hpp  VisualizerBuffer.cpp  Wav.cpp
src/bridge/: CMakeLists.txt  NimRef.cpp  NimRef.hpp  bridge.h  bridge.hpp  bridge.nim  bridge.nimble  cmake.nim  config.nims  config.nims.in  configure.nims
src/clipboard/: PatternClip.cpp  PatternClip.hpp  PatternClipboard.cpp  PatternClipboard.hpp
src/config/: Config.cpp  Config.hpp  ConfigDialog.cpp  ConfigDialog.hpp
src/core/: ChannelOutput.hpp  Config.cpp  Config.hpp  FastTimer.cpp  FastTimer.hpp  IconManager.cpp  Module.cpp  Module.hpp  ModuleFile.cpp  ModuleFile.hpp  NoteStrings.cpp  NoteStrings.hpp  Palette.cpp  Palette.hpp  PatternSelection.cpp  PatternSelection.hpp  PianoInput.cpp  PianoInput.hpp  PianoInputBindings.hpp  StandardRates.cpp  StandardRates.hpp  WavExporter.cpp  WavExporter.hpp  samplerates.hpp
src/export/: ExportWavDialog.cpp  ExportWavDialog.hpp  WavExporter.cpp  WavExporter.hpp
src/forms/: AboutDialog.cpp  AboutDialog.hpp  AudioDiagDialog.cpp  AudioDiagDialog.hpp  CommentsDialog.cpp  CommentsDialog.hpp  ConfigDialog.cpp  ConfigDialog.hpp  EffectsListDialog.cpp  EffectsListDialog.hpp  MainWindow.cpp  MainWindow.hpp  ModulePropertiesDialog.cpp  ModulePropertiesDialog.hpp  PersistantDialog.cpp  PersistantDialog.hpp  TempoCalculator.cpp  TempoCalculator.hpp
src/graphics/: CachedPen.cpp  CachedPen.hpp  CellPainter.cpp  CellPainter.hpp  PatternLayout.cpp  PatternLayout.hpp  PatternPainter.cpp  PatternPainter.hpp
src/midi/: Midi.cpp  Midi.hpp  MidiEnumerator.cpp  MidiEnumerator.hpp  MidiEvent.cpp  MidiEvent.hpp
src/miniaudio/: CMakeLists.txt
src/model/: BaseTableModel.cpp  BaseTableModel.hpp  PatternModel.cpp  PatternModel.hpp  SongListModel.cpp  SongListModel.hpp  SongModel.cpp  SongModel.hpp  TableModel.cpp  TableModel.hpp
src/resources/: icons.qrc  images.qrc
src/trackerboy/: interop.nim  main.nim  platforms.nim
src/utils/: FastTimer.cpp  FastTimer.hpp  Guarded.hpp  IconLocator.cpp  IconLocator.hpp  Locked.hpp  (+6 more)
test/: CMakeLists.txt  TestPatternClip.cpp  config.hpp.in  main.cpp
ui/: CMakeLists.txt  ColorTable.hpp  Config.cpp  Config.hpp  ConfigDialog.cpp  ConfigDialog.hpp  EnvelopeForm.cpp  EnvelopeForm.hpp  Frame.hpp  InstrumentEditor.cpp  InstrumentEditor.hpp  MainWindow.cpp  MainWindow.hpp  Miniaudio.cpp  Miniaudio.hpp  OrderEditor.cpp  PianoWidget.cpp  README.md  RenderWorker.cpp  RenderWorker.hpp  Renderer.cpp  Renderer.hpp  RendererThread.cpp  RendererThread.hpp  TableForm.cpp  TableForm.hpp  Tileset.cpp  Tileset.hpp  Trackerboy.cpp  Trackerboy.hpp  TrackerboyApp.cpp  TrackerboyApp.hpp  WaveEditor.cpp  WaveEditor.hpp  WaveGraph.cpp  WaveGraph.hpp  main.cpp  samplerates.cpp  samplerates.hpp  trackerboy.desktop  (+2 more)
(+833 files in other folders)
